# OpenStudio

./: .gitignore  CMakeLists.txt
dependencies/qt/: qmacstyle_mac.patch
openstudiocore/: CMakeLists.txt
openstudiocore/src/bimserver/: BIMserverConnection.cpp  BIMserverConnection.hpp  CMakeLists.txt  ProjectImportation.cpp  ProjectImportation.hpp  ReverseTranslator.cpp  ReverseTranslator.hpp
openstudiocore/src/isomodel/: SimModel.cpp
openstudiocore/src/model/: UtilityBill.cpp
openstudiocore/src/openstudio_app/: CMakeLists.txt  OpenStudioApp.cpp  OpenStudioApp.hpp  StartupMenu.cpp  StartupMenu.hpp  StartupView.hpp
openstudiocore/src/openstudio_lib/: CMakeLists.txt  MainMenu.cpp  MainMenu.hpp  MainWindow.cpp  MainWindow.hpp  OSDocument.cpp  OSDocument.hpp
